Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-60688

Qt5.9 QWebEngineWidget changeSelection doesn't work.

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 5.9.0 RC
    • 5.9.0 Beta 3
    • WebEngine
    • None
    • linux opensuse 64bits thumbleweed
    • 59df7bd0a92acf6cb9ef2eac551b7a0913e2cd1f

    Description

      Hi,
      the signal selectionChanged is not send when selection is changed in web page.
      I created a test case (see attachment)

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            pvarga Peter Varga
            montel Montel Laurent
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes