Fix selectionChanged signal out of input field

Task-number: QTBUG-60688
Change-Id: I6d0b78e6b8df54c40ae30d5f0909c631c440a9cd
Reviewed-by: Alexandru Croitor <alexandru.croitor@qt.io>